bonus: ommitted files add

--- a/philo/philo/Makefile
+++ b/philo/philo/Makefile
@@ -18,7 +18,7 @@ CFLAGS	=	-Wall -Werror -Wextra
 
 RM		=	rm -f
 
-SRCS	=	src/philo.c src/utils.c src/philo_routine.c src/init_lst.c
+SRCS	=	src/philo.c src/utils.c src/routine.c src/init_lst.c
 
 INCDIR	=	include/
 
