--- a/philo/philo_bonus/Makefile
+++ b/philo/philo_bonus/Makefile
@@ -10,4 +10,36 @@
 #                                                                              #
 # **************************************************************************** #
 
+NAME	=	philo_bonus
+
+CC		=	gcc
+
+CFLAGS	=	-Wall -Werror -Wextra
+
+RM		=	rm -f
+
+SRCS	=	src_bonus/philo.c src_bonus/utils.c src_bonus/philo_routine.c src_bonus/init_lst.c
+
+INCDIR	=	incl_bonus/
+
+OBJS	=	$(SRCS:.c=.o)
+
+
+all		:	$(NAME)
+
+%.o		:	%.c
+			$(CC) $(CFLAGS) -c $< -o $@ -I $(INCDIR)
+
+$(NAME)	:	$(OBJS)
+			$(CC) $(CFLAGS) -o $@ $^
+
+clean	:
+			$(RM) $(OBJS)
+
+fclean	:	clean
+			$(RM) $(NAME)
+
+re		:	fclean all
+
+.PHONY	:	all fclean clean re bonus
 
