so_long add 42header to makefile

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: ghan <ghan@student.42seoul.kr>             +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/09/22 21:42:07 by ghan              #+#    #+#              #
+#    Updated: 2021/09/22 21:42:13 by ghan             ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME	=	so_long
 
 CC		=	gcc
