--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "miniRT"]
 	path = miniRT
 	url = https://github.com/brilliantshell/miniRT.git
+[submodule "ft_cpp"]
+	path = ft_cpp
+	url = https://github.com/42ghan/ft_cpp.git
